--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dashevo/grpc-common",
+  "name": "@xazab/grpc-common",
   "version": "0.3.1",
   "description": "Common GRPC library",
   "main": "index.js",
